--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: go
 go:
-- 1.5.1
 - release
 - tip
 script:
-- go test -v ./...
+- go test -v .*go
 - make build
 deploy:
   provider: releases
